updated Scoreboard styling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
     <main>
       <h1>Rock Paper Scissors Game</h1>
       <section class="scoreboard">
-          <h2>Player: 0</h2>
-          <h2>Computer: 2</h2>
+        <h2>SCOREBOARD</h2>
+          <div class="scoreboard-info">
+              <div class="scoreboard-player">
+                <h3>Player</h3>
+                <p id="player-score">#</p>
+              </div>
+              <div class="scoreboard-computer">
+                <h3>Computer</h3>
+                <p id="computer-score">#</p>
+              </div>
+          </div>
       </section>
       <section class="prompt">
           <p>would you like to play a game?</p>
