working single round. Now need to make a Referee function

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
           </div>
       </section>
       <section class="prompt">
-          <p>would you like to play a game?</p>
+          <pre id="prompt-output"></pre>
+          <!-- <h1 id="prompt-output"></h1> -->
       </section>
       <section class="options">
-          <i class="fa-solid fa-hand-back-fist"></i>
-          <i class="fa-solid fa-hand"></i>
-          <i class="fa-solid fa-hand-scissors"></i>
+          <i class="fa-solid fa-hand-back-fist" id="rock"></i>
+          <i class="fa-solid fa-hand" id="paper"></i>
+          <i class="fa-solid fa-hand-scissors" id="scissors"></i>
       </section>
 
     </main>
