fully working game. scoring system works

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
           <div class="scoreboard-info">
               <div class="scoreboard-player">
                 <h3>Player</h3>
-                <p id="player-score">#</p>
+                <p id="player-score">0</p>
+              </div>
+              <div class="scoreboard-tie">
+                <h3>Tie</h3>
+                <p id="tie-score">0</p>
               </div>
               <div class="scoreboard-computer">
                 <h3>Computer</h3>
-                <p id="computer-score">#</p>
+                <p id="computer-score">0</p>
               </div>
           </div>
       </section>
